--- a/.github/workflows/publish-release.yaml
+++ b/.github/workflows/publish-release.yaml
@@ -12,6 +12,10 @@ on:
         default: 'zip'
         required: false
         type: string
+      zip-name:
+        description: 'The name of the zip file.'
+        required: false
+        type: string
 
 name: Build & Publish Release Asset
 
@@ -32,6 +36,10 @@ jobs:
         run: |
           if [ ! -f "$YAML_FILE" ]; then
               echo "Error: The structure file does not exist."
+              exit 1
+          fi
+          if [ "$ZIP_TOOL" != "zip" ] && [ "$ZIP_TOOL" != "tar" ]; then
+              echo "Error: The zip tool must be 'zip' or 'tar'."
               exit 1
           fi
           FOLDER_NAME=$(yq e '.production.name' "$YAML_FILE")
@@ -56,13 +64,14 @@ jobs:
       - name: Build project
         run: |
           # Define the zip file name
-          if [ "$ZIP_TOOL" == "zip" ]; then
-              ZIP_FILE="${FOLDER_NAME}.zip"
-          elif [ "$ZIP_TOOL" == "tar" ]; then
-              ZIP_FILE="${FOLDER_NAME}.tar"
+          if [ -z "$ZIP_NAME" ]; then
+              ZIP_FILE="$ZIP_NAME"
           else
-              echo "Error: The zip tool is not supported."
-              exit 1
+              if [ "$ZIP_TOOL" == "zip" ]; then
+                  ZIP_FILE="${FOLDER_NAME}.zip"
+              elif [ "$ZIP_TOOL" == "tar" ]; then
+                  ZIP_FILE="${FOLDER_NAME}.tar"
+              fi
           fi
           echo "ZIP_FILE=$ZIP_FILE" >> $GITHUB_ENV
           # Zip the folder
